@@ -5,34 +5,28 @@ import com.slack.api.methods.response.chat.ChatPostMessageResponse;
 import com.slack.api.model.block.LayoutBlock;
 import com.slack.api.model.block.SectionBlock;
 import com.slack.api.model.block.composition.MarkdownTextObject;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import com.slack.api.Slack;
 import com.slack.api.methods.MethodsClient;
-import org.springframework.beans.factory.annotation.Value;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Service for posting messages to Slack threads
+ */
 @Service
 public class SlackService {
 
-    @Value("${slack.bot-token}")
-    private String botToken;
+    private final MethodsClient methodsClient;
 
-    private final Slack slack;
-
-    public SlackService() {
-        this.slack = Slack.getInstance();
+    public SlackService(MethodsClient methodsClient) {
+        this.methodsClient = methodsClient;
     }
 
     public void postThreadResponse(String channel, String threadTs, String markdownContent) {
         try {
-            MethodsClient methods = slack.methods(botToken);
-
-            // Create markdown block
-            List<LayoutBlock> blocks = Arrays.asList(
+            // Create markdown blocks for better formatting
+            List<LayoutBlock> blocks = List.of(
                 SectionBlock.builder()
                     .text(MarkdownTextObject.builder()
                         .text(markdownContent)
@@ -40,11 +34,10 @@ public class SlackService {
                     .build()
             );
 
-            ChatPostMessageResponse response = methods.chatPostMessage(req -> req
+            ChatPostMessageResponse response = methodsClient.chatPostMessage(req -> req
                 .channel(channel)
                 .threadTs(threadTs)
                 .blocks(blocks)
-                .text("API Response") // Fallback text
             );
 
             if (!response.isOk()) {
